--- a/Makefile.in
+++ b/Makefile.in
@@ -57,7 +57,7 @@ CONFIG_CLEAN_FILES =
 am__installdirs = $(DESTDIR)$(bindir) $(DESTDIR)$(man1dir)
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_advdef_OBJECTS = redef.$(OBJEXT) utility.$(OBJEXT) \
+am_advdef_OBJECTS = redef.$(OBJEXT) file.$(OBJEXT) data.$(OBJEXT) \
 	siglock.$(OBJEXT) compress.$(OBJEXT) getopt.$(OBJEXT) \
 	snprintf.$(OBJEXT) pngex.$(OBJEXT) fz.$(OBJEXT) \
 	error.$(OBJEXT) snstring.$(OBJEXT) png.$(OBJEXT) mng.$(OBJEXT) \
@@ -72,35 +72,10 @@ am_advdef_OBJECTS = redef.$(OBJEXT) utility.$(OBJEXT) \
 advdef_OBJECTS = $(am_advdef_OBJECTS)
 advdef_LDADD = $(LDADD)
 am_advmng_OBJECTS = remng.$(OBJEXT) pngex.$(OBJEXT) mngex.$(OBJEXT) \
-	scroll.$(OBJEXT) utility.$(OBJEXT) siglock.$(OBJEXT) \
-	compress.$(OBJEXT) getopt.$(OBJEXT) snprintf.$(OBJEXT) \
-	fz.$(OBJEXT) png.$(OBJEXT) mng.$(OBJEXT) error.$(OBJEXT) \
-	snstring.$(OBJEXT) 7zdeflate.$(OBJEXT) 7zlzma.$(OBJEXT) \
-	AriBitCoder.$(OBJEXT) CRC.$(OBJEXT) DeflateDecoder.$(OBJEXT) \
-	DeflateEncoder.$(OBJEXT) HuffmanEncoder.$(OBJEXT) \
-	IInOutStreams.$(OBJEXT) InByte.$(OBJEXT) LSBFDecoder.$(OBJEXT) \
-	LSBFEncoder.$(OBJEXT) LZMA.$(OBJEXT) LZMADecoder.$(OBJEXT) \
-	LZMAEncoder.$(OBJEXT) LenCoder.$(OBJEXT) \
-	LiteralCoder.$(OBJEXT) OutByte.$(OBJEXT) WindowIn.$(OBJEXT) \
-	WindowOut.$(OBJEXT)
-advmng_OBJECTS = $(am_advmng_OBJECTS)
-advmng_LDADD = $(LDADD)
-am_advpng_OBJECTS = repng.$(OBJEXT) pngex.$(OBJEXT) utility.$(OBJEXT) \
+	scroll.$(OBJEXT) file.$(OBJEXT) data.$(OBJEXT) \
 	siglock.$(OBJEXT) compress.$(OBJEXT) getopt.$(OBJEXT) \
-	snprintf.$(OBJEXT) fz.$(OBJEXT) png.$(OBJEXT) error.$(OBJEXT) \
-	snstring.$(OBJEXT) 7zdeflate.$(OBJEXT) 7zlzma.$(OBJEXT) \
-	AriBitCoder.$(OBJEXT) CRC.$(OBJEXT) DeflateDecoder.$(OBJEXT) \
-	DeflateEncoder.$(OBJEXT) HuffmanEncoder.$(OBJEXT) \
-	IInOutStreams.$(OBJEXT) InByte.$(OBJEXT) LSBFDecoder.$(OBJEXT) \
-	LSBFEncoder.$(OBJEXT) LZMA.$(OBJEXT) LZMADecoder.$(OBJEXT) \
-	LZMAEncoder.$(OBJEXT) LenCoder.$(OBJEXT) \
-	LiteralCoder.$(OBJEXT) OutByte.$(OBJEXT) WindowIn.$(OBJEXT) \
-	WindowOut.$(OBJEXT)
-advpng_OBJECTS = $(am_advpng_OBJECTS)
-advpng_LDADD = $(LDADD)
-am_advzip_OBJECTS = rezip.$(OBJEXT) zip.$(OBJEXT) utility.$(OBJEXT) \
-	siglock.$(OBJEXT) compress.$(OBJEXT) zipsh.$(OBJEXT) \
-	getopt.$(OBJEXT) snprintf.$(OBJEXT) 7zdeflate.$(OBJEXT) \
+	snprintf.$(OBJEXT) fz.$(OBJEXT) png.$(OBJEXT) mng.$(OBJEXT) \
+	error.$(OBJEXT) snstring.$(OBJEXT) 7zdeflate.$(OBJEXT) \
 	7zlzma.$(OBJEXT) AriBitCoder.$(OBJEXT) CRC.$(OBJEXT) \
 	DeflateDecoder.$(OBJEXT) DeflateEncoder.$(OBJEXT) \
 	HuffmanEncoder.$(OBJEXT) IInOutStreams.$(OBJEXT) \
@@ -108,6 +83,32 @@ am_advzip_OBJECTS = rezip.$(OBJEXT) zip.$(OBJEXT) utility.$(OBJEXT) \
 	LZMA.$(OBJEXT) LZMADecoder.$(OBJEXT) LZMAEncoder.$(OBJEXT) \
 	LenCoder.$(OBJEXT) LiteralCoder.$(OBJEXT) OutByte.$(OBJEXT) \
 	WindowIn.$(OBJEXT) WindowOut.$(OBJEXT)
+advmng_OBJECTS = $(am_advmng_OBJECTS)
+advmng_LDADD = $(LDADD)
+am_advpng_OBJECTS = repng.$(OBJEXT) pngex.$(OBJEXT) file.$(OBJEXT) \
+	data.$(OBJEXT) siglock.$(OBJEXT) compress.$(OBJEXT) \
+	getopt.$(OBJEXT) snprintf.$(OBJEXT) fz.$(OBJEXT) png.$(OBJEXT) \
+	error.$(OBJEXT) snstring.$(OBJEXT) 7zdeflate.$(OBJEXT) \
+	7zlzma.$(OBJEXT) AriBitCoder.$(OBJEXT) CRC.$(OBJEXT) \
+	DeflateDecoder.$(OBJEXT) DeflateEncoder.$(OBJEXT) \
+	HuffmanEncoder.$(OBJEXT) IInOutStreams.$(OBJEXT) \
+	InByte.$(OBJEXT) LSBFDecoder.$(OBJEXT) LSBFEncoder.$(OBJEXT) \
+	LZMA.$(OBJEXT) LZMADecoder.$(OBJEXT) LZMAEncoder.$(OBJEXT) \
+	LenCoder.$(OBJEXT) LiteralCoder.$(OBJEXT) OutByte.$(OBJEXT) \
+	WindowIn.$(OBJEXT) WindowOut.$(OBJEXT)
+advpng_OBJECTS = $(am_advpng_OBJECTS)
+advpng_LDADD = $(LDADD)
+am_advzip_OBJECTS = rezip.$(OBJEXT) zip.$(OBJEXT) file.$(OBJEXT) \
+	data.$(OBJEXT) siglock.$(OBJEXT) compress.$(OBJEXT) \
+	zipsh.$(OBJEXT) getopt.$(OBJEXT) snprintf.$(OBJEXT) \
+	7zdeflate.$(OBJEXT) 7zlzma.$(OBJEXT) AriBitCoder.$(OBJEXT) \
+	CRC.$(OBJEXT) DeflateDecoder.$(OBJEXT) \
+	DeflateEncoder.$(OBJEXT) HuffmanEncoder.$(OBJEXT) \
+	IInOutStreams.$(OBJEXT) InByte.$(OBJEXT) LSBFDecoder.$(OBJEXT) \
+	LSBFEncoder.$(OBJEXT) LZMA.$(OBJEXT) LZMADecoder.$(OBJEXT) \
+	LZMAEncoder.$(OBJEXT) LenCoder.$(OBJEXT) \
+	LiteralCoder.$(OBJEXT) OutByte.$(OBJEXT) WindowIn.$(OBJEXT) \
+	WindowOut.$(OBJEXT)
 advzip_OBJECTS = $(am_advzip_OBJECTS)
 advzip_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
@@ -222,7 +223,8 @@ target_alias = @target_alias@
 advzip_SOURCES = \
 	rezip.cc \
 	zip.cc \
-	utility.cc \
+	file.cc \
+	data.cc \
 	siglock.cc \
 	compress.cc \
 	zipsh.cc \
@@ -251,7 +253,8 @@ advzip_SOURCES = \
 advpng_SOURCES = \
 	repng.cc \
 	pngex.cc \
-	utility.cc \
+	file.cc \
+	data.cc \
 	siglock.cc \
 	compress.cc \
 	getopt.c \
@@ -285,7 +288,8 @@ advmng_SOURCES = \
 	pngex.cc \
 	mngex.cc \
 	scroll.cc \
-	utility.cc \
+	file.cc \
+	data.cc \
 	siglock.cc \
 	compress.cc \
 	getopt.c \
@@ -317,7 +321,8 @@ advmng_SOURCES = \
 
 advdef_SOURCES = \
 	redef.cc \
-	utility.cc \
+	file.cc \
+	data.cc \
 	siglock.cc \
 	compress.cc \
 	getopt.c \
@@ -356,7 +361,7 @@ EXTRA_DIST = \
 	doc/advdef.html doc/advzip.html doc/advpng.html doc/advmng.html doc/history.html doc/readme.html doc/authors.html doc/install.html \
 	configure.dos configure.windows configure.darwin autogen.sh noautomake.sh \
 	7z/README \
-	check.lst \
+	test/test.lst \
 	test/mappy.png \
 	test/mappy.mng \
 	test/basn2c08.png \
@@ -372,7 +377,8 @@ noinst_HEADERS = \
 	mngex.h \
 	scroll.h \
 	compress.h \
-	utility.h \
+	file.h \
+	data.h \
 	zip.h \
 	except.h \
 	siglock.h \
@@ -1011,7 +1017,7 @@ uninstall-man: uninstall-man1
 
 
 clean-local:
-	rm -f new.lst check.zip mappy.mng mappy.png
+	rm -f check.lst check.zip mappy.mng mappy.png
 	rm -f basn2c08.png basn3p01.png basn3p02.png basn3p04.png basn3p08.png basn6a08.png
 	rm -f advdef.exe advzip.exe advpng.exe advmng.exe
 	rm -f mappy*.png
@@ -1051,48 +1057,48 @@ HISTORY: doc/history.txt
 doc/copying.txt: COPYING
 	cat $< | todos > $@
 
-check-local: advzip check.lst
+check-local: advzip test/test.lst
 	@./advzip -a -1 check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip > new.lst
+	@./advzip -L check.zip > check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -2 check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -3 check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -4 check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -1 -N check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -2 -N check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -3 -N check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@./advzip -a -4 -N check.zip $(srcdir)/COPYING
-	@./advzip -L check.zip >> new.lst
+	@./advzip -L check.zip >> check.lst
 	@./advzip -t -p check.zip
 	@cp $(srcdir)/test/mappy.mng .
 	@./advmng -v -z -1 -f -S 8 mappy.mng
-	@./advmng -L mappy.mng >> new.lst
+	@./advmng -L mappy.mng >> check.lst
 	@./advmng -v -x -1 mappy.mng
 	@./advmng -v -a 30 -1 -S 8 mappy.mng mappy-*.png
-	@./advmng -L mappy.mng >> new.lst
+	@./advmng -L mappy.mng >> check.lst
 	@./advmng -v -a 30 -n -1 -S 8 mappy.mng mappy-*.png
-	@./advmng -L mappy.mng >> new.lst
+	@./advmng -L mappy.mng >> check.lst
 	@./advmng -v -a 30 -n -r -1 -S 8 mappy.mng mappy-*.png
-	@./advmng -L mappy.mng >> new.lst
+	@./advmng -L mappy.mng >> check.lst
 	@cp $(srcdir)/test/mappy.png .
 	@./advpng -f -z mappy.png
-	@./advpng -L mappy.png >> new.lst
+	@./advpng -L mappy.png >> check.lst
 	@cp $(srcdir)/test/basn2c08.png $(srcdir)/test/basn3p01.png $(srcdir)/test/basn3p02.png $(srcdir)/test/basn3p04.png $(srcdir)/test/basn3p08.png $(srcdir)/test/basn6a08.png .
 	@./advpng -f -z basn2c08.png basn3p01.png basn3p02.png basn3p04.png basn3p08.png basn6a08.png
-	@./advpng -L basn2c08.png basn3p01.png basn3p02.png basn3p04.png basn3p08.png basn6a08.png >> new.lst
-	@cmp new.lst $(srcdir)/check.lst
+	@./advpng -L basn2c08.png basn3p01.png basn3p02.png basn3p04.png basn3p08.png basn6a08.png >> check.lst
+	@cmp check.lst $(srcdir)/test/test.lst
 	@echo Success!
 
 distdos: $(DISTDOS_ROOT) $(DISTDOS_DOC)
